--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "vee-validate": "^4.11.8",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2",
     "yup": "^1.3.2"
