--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.37.0",
     "selectic": "^3.0.21",
@@ -22,6 +23,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.13",
+    "vue-select": "^4.0.0-beta.6",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2",
     "yup": "^1.3.2"
