--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.37.0",
     "selectic": "^3.0.21",
