--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.7.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
+    "papaparse": "^5.4.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.37.0",
     "selectic": "^3.0.21",
